[package]
name = "generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0.138", features = ["derive"] }
serde_yaml = "0.8.24"
serde_json = "1.0.82"
bcc = "0.0.32"
byteorder = "1.4.3"
libc = "0.2.126"
clap = "3.2.8"
